--- a/login.html
+++ b/login.html
@@ -13,10 +13,10 @@
 
   <script>
     var webAuth = new auth0.WebAuth({
-      domain: 'Ydatabasecentrale.eu.auth0.comN',  // Sostituisci con il tuo dominio Auth0
+      domain: 'databasecentrale.eu.auth0.com',       // Sostituisci con il tuo dominio Auth0
       clientID: '5tSPZyqtnN5BoC8VTLPs8HhsDo13enOq',  // Sostituisci con il tuo Client ID
-      redirectUri: 'https://github.com/ElitePlus79/Database.git',  // Dove l'utente sarà reindirizzato dopo il login
-      responseType: 'token id_token',
+      redirectUri: 'https://github.com/ElitePlus79/Database',  // URL di redirect (GitHub Pages o Google Sites)
+      responseType: 'code',
       scope: 'openid profile email',
     });
 
@@ -26,10 +26,9 @@
 
     function logout() {
       webAuth.logout({
-        returnTo: 'https://sites.google.com/view/databasecentralesir?usp=sharing'  // Dove l'utente sarà reindirizzato dopo il logout
+        returnTo: 'https://sites.google.com/view/databasecentralesir?usp=sharingL'  // URL di logout
       });
     }
   </script>
 </body>
 </html>
-
