--- a/login.html
+++ b/login.html
@@ -11,8 +11,8 @@
 
   <script>
     var webAuth = new auth0.WebAuth({
-      domain: 'databasecentrale.eu.auth0.comN',       // Sostituisci con il tuo dominio Auth0
-      clientID: '5tSPZyqtnN5BoC8VTLPs8HhsDo13enOqD',  // Sostituisci con il tuo Client ID
+      domain: 'databasecentrale.eu.auth0.com',       // Sostituisci con il tuo dominio Auth0
+      clientID: '5tSPZyqtnN5BoC8VTLPs8HhsDo13enOq',  // Sostituisci con il tuo Client ID
       redirectUri: 'https://github.com/ElitePlus79/Database',  // URL di redirect (GitHub Pages o Google Sites)
       responseType: 'code',
       scope: 'openid profile email',
